--- a/doc/errata/2013-11-22-univention-management-console-frontend.yaml
+++ b/doc/errata/2013-11-22-univention-management-console-frontend.yaml
@@ -2,7 +2,7 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-management-console-frontend
-fix: 3.0.152-3.800.201311221527
+fix: 3.0.152-4.801.201311251638
 note:
 version: [0]
 desc: |
@@ -11,4 +11,8 @@ desc: |
     source files) are now redirected in order to avoid problems in the
     representation.
   * Fixed rendering of "Activate UCS" dialog in Internet Explorer 9 and 10.
-bug: [29588,33133]
+  * This update corrects the generation of ucs-overview links. The links
+    are now generated in the domain-joinscript. This ensures that
+    host- and domain-identifiers match the current settings in case of
+    a domain-rejoin and after completing the appliance setup.
+bug: [29588,33133,33447]
