--- a/base/univention-system-setup/debian/rules
+++ b/base/univention-system-setup/debian/rules
@@ -45,6 +45,7 @@ override_dh_install:
 
 override_dh_installinit:
 	dh_installinit -punivention-system-setup-boot --no-start -u"defaults 93"
+	dh_installinit -punivention-system-setup-boot-prepare --no-start -u"defaults 15"
 
 override_dh_fixperms:
 	dh_fixperms
