--- a/doc/errata/2013-11-20-univention-samba4.yaml
+++ b/doc/errata/2013-11-20-univention-samba4.yaml
@@ -2,14 +2,17 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-samba4
-fix: 3.0.39-6.562.201312021513
+fix: 3.0.39-7.563.201312061111
 note:
 version: [0]
 desc: |
   This errata update fixes several issues:
   * Samba4 could not be started on host with only IPv6 interfaces.
     This has been fixed by deactivating wins support on IPv6 hosts.
-  * Multiple logroate configurations for samba log files could lead 
+  * Multiple logrotate configurations for samba log files could lead 
     to warning messages via cron. These redundant configurations are
     removed with this update.
-bug: [33250, 33529]
+  * ldapsearch-wrapper has been added to univention-ldapsearch calls
+    in samba4 related setup scripts to prevent line wrapping of 
+    search results.
+bug: [33250, 33529, 33583]
