YAML Bug #32845 Bug #33556
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46543 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/2013-12-04-univention-management-console-module-udm.yaml
+++ b/doc/errata/2013-12-04-univention-management-console-module-udm.yaml
@@ -12,5 +12,5 @@ desc: |
     been changed to unticked.
   * If the initial search attribute for a UDM module is configured and its
     value was not any searchable attribute, it caused LDAP errors. Now the
-    module falls back to search for "Default properties"
+    module falls back to search for "Default properties".
 bug: [32845, 33556]
