fix broken yaml file (Bug #32878)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.1/ucs-3.1-1@46563 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/2013-12-05-samba4.yaml
+++ b/doc/errata/2013-12-05-samba4.yaml
@@ -1,7 +1,7 @@
 product: ucs
 release: "3.1"
 scope: ucs_3.1-0-errata3.1-1
-src: samba
+src: samba4
 fix: 4.0.3-1.381.201311261648
 note: This update fixes these vulnerabilities.
 version: [1]
