+  * consider group name localization in +    templates (Bug #33650)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46585 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/conffiles/etc/security/limits.conf
+++ b/base/univention-pam/conffiles/etc/security/limits.conf
@@ -29,6 +29,7 @@ for key in configRegistry.keys():
         scope = ''
     elif scope == 'group':
         scope = '@'
+		name = configRegistry.groupNameMapping(name)
     else:
         print '# Illegal variable "%s"\n# <scope> must be "user" or "group", not "%s"\n#' % (key, type, )
         continue
