--- a/base/univention-pam/conffiles/etc/security/access-su.conf
+++ b/base/univention-pam/conffiles/etc/security/access-su.conf
@@ -7,7 +7,7 @@ for item in configRegistry.keys():
 	if item.startswith("auth/" + scope + "/") and configRegistry.is_true(item, False):
 		tmp = item.split("/")
 		if len(tmp) >= 4:
-			names[tmp[3]] = 1
+			names[configRegistry.groupNameMapping(tmp[3])] = 1
 
 print "+:" + ",".join(names.keys()) + ":ALL"
 print "-:ALL:ALL"
