added group name localization (Bug #33646)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46610 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/nagios/univention-nagios/debian/control
+++ b/nagios/univention-nagios/debian/control
@@ -23,7 +23,7 @@ Depends: ${misc:Depends}, ${python:Depends},
  nagios-plugins,
  nagios-nrpe-plugin,
  libapache2-mod-auth-pam,
- univention-config-registry,
+ univention-config-registry (>= 9.0.5-2.443.201312091553),
  univention-base-files,
  univention-directory-listener,
  univention-nagios-cups,
