added dependency to p-u-c-r (Bug #33710)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46669 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/control
+++ b/base/univention-lib/debian/control
@@ -12,6 +12,7 @@ Package: python-univention-lib
 Architecture: all
 Depends: ${python:Depends},
  ${misc:Depends},
+ python-univention-config-registry (>= 9.0.5-2.443.201312091553),
  pwgen,
  python-magic
 Provides: ${python:Provides}
@@ -27,7 +28,7 @@ Description: UCS - common scripting functions for Python scripts
 Package: shell-univention-lib
 Architecture: all
 Depends: ${misc:Depends},
- python-univention-config-registry (>= 8.0.2-1),
+ python-univention-config-registry (>= 9.0.5-2.443.201312091553),
  python-univention-lib (= ${binary:Version}),
  pwgen
 Description: UCS - common scripting functions for shell scripts
