--- a/doc/errata/staging/2013-12-10-univention-lib.yaml
+++ b/doc/errata/staging/2013-12-10-univention-lib.yaml
@@ -2,13 +2,13 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-lib
-fix: 3.0.26-5.200.201312101601
+fix: 3.0.26-9.203.201312111519
 note:
 version: [0]
 desc: |
   This errata update fixes several issues:
-  * Group name localization has been added to
-    univention-lib.
-  * A new pyhton lib "s4" has been added for
-    samba4 related stuff.
+  * Group name localization has been added to univention-lib. 
+    The new function "custom_groupname" maps the default UCS groups
+    to the localized group name.
+  * A new pyhton lib "s4" has been added for samba4 related stuff.
 bug: [33649,33710]
