added group-name-mapping.py for autmatically setting group localization vars (Bug #33710)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46671 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-pam/debian/control
+++ b/base/univention-pam/debian/control
@@ -18,7 +18,8 @@ Depends: ${misc:Depends},
  univention-skel,
  nscd,
  univention-home-mounter,
- shell-univention-lib,
+ shell-univention-lib (>= 3.0.26-7.202.201312111504),
+ python-univention-lib (>= 3.0.26-9.203.201312111519),
  libnss-extrausers
 Description: UCS - login configuration
  This package contains the configuration for the pluggable
