--- a/doc/errata/staging/2013-12-09-univention-config-registry.yaml
+++ b/doc/errata/staging/2013-12-09-univention-config-registry.yaml
@@ -8,5 +8,5 @@ version: [0]
 desc: |
   The function "groupNameMapping()" has been added
   to the ConfigRegistry class to easily convert group
-  name localizations.
+  names.
 bug: [33650]
