--- a/doc/errata/staging/2013-11-25-univention-directory-replication.yaml
+++ b/doc/errata/staging/2013-11-25-univention-directory-replication.yaml
@@ -7,5 +7,5 @@ note:
 version: [1]
 desc: |
   The LDAP replication handling for modrdn has been improved which avoids the
-  duplication of LDAP objects.
+  duplication of LDAP objects when moving objects.
 bug: [33555]
