fix typos (Bug #33482 et al)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46699 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/doc/errata/staging/2013-11-20-samba.yaml
+++ b/doc/errata/staging/2013-11-20-samba.yaml
@@ -6,7 +6,7 @@ fix: 4.1.0-1.598.201311201446
 note:
 version: [0]
 desc: |
-  Winows 8 clients were not able to print to samba printserver
-  if client-side printer drivers were used. This errata updated fixes
+  Windows 8 clients were not able to print to Samba printservers
+  if client-side printer drivers were used. This errata update fixes
   this issue.
 bug: [33197]
