--- a/doc/errata/staging/2013-11-22-univention-apache.yaml
+++ b/doc/errata/staging/2013-11-22-univention-apache.yaml
@@ -7,9 +7,9 @@ note:
 version: [0]
 desc: |
   This errata update fixes several issues:
-  * Entries and available languages on the UCS-overview aren't cached anymore.
-  * This update corrects the generation of ucs-overview links. The links
-    are now generated in the domain-joinscript. This ensures that
-    host- and domain-identifiers match the current settings in case of
-    a domain-rejoin and after completing the appliance setup.
+  * Entries and available languages on the UCS overview page aren't cached anymore.
+  * This update corrects the generation of overview links. The links
+    are now generated in the join script. This ensures that
+    host and domain identifiers match the current settings in case of
+    a rejoin and after completing the appliance setup.
 bug: [33130,33447]
