--- a/doc/errata/staging/2013-11-26-univention-directory-manager-modules.yaml
+++ b/doc/errata/staging/2013-11-26-univention-directory-manager-modules.yaml
@@ -6,6 +6,6 @@ fix: 9.0.75-10.1162.201312101241
 note:
 version: [0]
 desc: |
-  Moving objects now also supports mixed-case scenarios. This is relvant when
+  Moving objects now also supports mixed-case scenarios. This is relevant when
   moving organizational units or containers in Samba 4/Active Directory.
 bug: [33482]
