--- a/doc/errata/staging/2013-12-09-univention-config-registry.yaml
+++ b/doc/errata/staging/2013-12-09-univention-config-registry.yaml
@@ -2,11 +2,16 @@ product: ucs
 release: "3.2"
 scope: ucs_3.2-0-errata3.2-0
 src: univention-config-registry
-fix: 9.0.5-2.443.201312091553
+fix: 9.0.5-3.444.201312191545
 note:
 version: [0]
 desc: |
-  The function "groupNameMapping()" has been added
-  to the ConfigRegistry class to easily convert group
-  names.
-bug: [33650]
+  univention-config has been improved with repect to the
+  following points:
+  * The function "groupNameMapping()" has been added
+    to the ConfigRegistry class to easily convert group
+    names.
+  * univention-ldapsearch now accepts standard UDM
+    command line options --binddn, --bindpwd and
+    --bindpwdfile for authentiaction.
+bug: [33650, 32560]
