Update jenkins jobs: use utils.sh and the new UCS 3.2 ami (Bug #33463)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46858 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-112-update-3.1-to-3.2-appupdate-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-112-update-3.1-to-3.2-appupdate-backup-s3.cfg
@@ -80,6 +80,7 @@ command9:
  halt -p
 files:
  ~/ec2/license/autotest112.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [backup112]
 profile:
@@ -138,4 +139,6 @@ command8:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup112_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command9:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
