--- a/test/ucs-ec2-tools/examples/jenkins/autotest-113-update-3.1-to-3.2-appupdate-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-113-update-3.1-to-3.2-appupdate-backup-s4.cfg
@@ -80,6 +80,7 @@ command9:
  halt -p
 files:
  ~/ec2/license/autotest113.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [backup113]
 profile:
@@ -140,4 +141,6 @@ command8:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup113_IP]:/var/log/samba/* .
 command9:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
