--- a/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-123-appupdate-backup-s4.cfg
@@ -73,6 +73,7 @@ command8:
  halt -p
 files:
  ~/ec2/license/autotest123.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [backup123]
 profile:
@@ -126,4 +127,6 @@ command7:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup123_IP]:/var/log/samba/* .
 command8:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
