--- a/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-204-ucsschool-multiserver-s4-school-only.cfg
@@ -66,6 +66,7 @@ files:
  ~/ec2/license/autotest204.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2041]
 profile:
@@ -102,6 +103,7 @@ command8:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2042]
 profile:
@@ -145,3 +147,4 @@ command8:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
