--- a/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-100-app-master-s3.cfg
@@ -75,4 +75,5 @@ command6:
  halt -p
 files:
  ~/ec2/license/autotest100.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
 
