--- a/test/ucs-ec2-tools/examples/jenkins/autotest-102-app-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-102-app-backup-s3.cfg
@@ -69,6 +69,7 @@ command7:
  halt -p
 files:
  ~/ec2/license/autotest102.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
 
 [backup102]
 profile:
@@ -116,4 +117,6 @@ command6:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup102_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command7:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
