--- a/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
@@ -69,6 +69,7 @@ command7:
  halt -p
 files:
  ~/ec2/license/autotest103.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [backup103]
 profile:
@@ -118,4 +119,6 @@ command6:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup103_IP]:/var/log/samba/* .
 command7:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
