--- a/test/ucs-ec2-tools/examples/jenkins/autotest-117-update-3.1-to-3.2-appupdate-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-117-update-3.1-to-3.2-appupdate-member-s4.cfg
@@ -80,6 +80,7 @@ command9:
  halt -p
 files:
  ~/ec2/license/autotest117.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [member117]
 profile:
@@ -138,4 +139,6 @@ command8:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member117_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command9:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
