--- a/test/ucs-ec2-tools/examples/jenkins/autotest-126-appupdate-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-126-appupdate-member-s3.cfg
@@ -73,6 +73,7 @@ command8:
  halt -p
 files:
  ~/ec2/license/autotest126.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [member126]
 profile:
@@ -124,4 +125,6 @@ command7:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member126_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command8:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
