--- a/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
@@ -73,6 +73,7 @@ command8:
  halt -p
 files:
  ~/ec2/license/autotest127.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [member127]
 profile:
@@ -123,4 +124,6 @@ command7:
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP]:"/var/log/univention/{join,setup,listener}.log" .
 command8:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
