--- a/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
@@ -73,4 +73,5 @@ files:
  ~/ec2/license/autotest200.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
