--- a/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-206-ucsschool-update-3.1-to-3.2-singleserver-s4.cfg
@@ -76,4 +76,5 @@ files:
  ~/ec2/license/autotest206.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
