--- a/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-209-ucsschool-update-3.1-to-3.2-multiserver-s4-school-only.cfg
@@ -69,6 +69,7 @@ files:
  ~/ec2/license/autotest209.ldif /root/
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2091]
 profile:
@@ -107,6 +108,7 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [slave2092]
 profile:
@@ -153,3 +155,4 @@ command9:
 files:
  examples/jenkins/utils/schoolinstaller.py /root/
  examples/jenkins/utils/utils.sh /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
