Update jenkins jobs: use utils.sh and the new UCS 3.2 ami (Bug #33463)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46859 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-097-member-s4.cfg
@@ -56,7 +56,7 @@ command5:
 command6:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
 [member097]
@@ -89,6 +89,6 @@ command5:
 command6:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
