--- a/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-090-master-s3.cfg
@@ -58,6 +58,6 @@ command4:
 command5:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
