--- a/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-093-backup-s4.cfg
@@ -56,7 +56,7 @@ command5:
 command6:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
 [backup093]
@@ -91,6 +91,6 @@ command5:
 command6:
  halt -p
 files:
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
  examples/jenkins/utils/utils.sh /root/
 
