--- a/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
@@ -77,5 +77,5 @@ command6:
  halt -p
 files:
  ~/ec2/license/autotest101.ldif /root/
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
