--- a/test/ucs-ec2-tools/examples/jenkins/autotest-102-app-backup-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-102-app-backup-s3.cfg
@@ -69,7 +69,7 @@ command7:
  halt -p
 files:
  ~/ec2/license/autotest102.ldif /root/
- ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/ /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
 
 [backup102]
 profile:
