Use utils.sh for app install tests (Bug #32799)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46863 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
@@ -66,4 +66,5 @@ command6:
 files:
  ~/ec2/license/autotest101.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
