--- a/test/ucs-ec2-tools/examples/jenkins/autotest-105-app-slave-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-105-app-slave-s4.cfg
@@ -60,6 +60,7 @@ command7:
 files:
  ~/ec2/license/autotest105.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [slave105]
 profile:
@@ -95,4 +96,5 @@ command7:
  halt -p
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
