--- a/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-103-app-backup-s4.cfg
@@ -60,6 +60,7 @@ command7:
 files:
  ~/ec2/license/autotest103.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [backup103]
 profile:
@@ -97,4 +98,5 @@ command7:
  halt -p
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
