Switch to 3.2 AMI and use utils.sh (Bug #32799)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46865 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-106-app-member-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-106-app-member-s3.cfg
@@ -49,7 +49,7 @@ command3:
  univention-license-import /root/autotest106.ldif
 command4:
  . utils.sh; switch_to_test_app_center
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master106_IP] 'for app in APP_ID; do univention-add-app -m --latest $app; done'
+ . utils.sh; install_apps_master_packages APP_ID
  . utils.sh; run_join_scripts
 command5:
  # None
@@ -80,9 +80,8 @@ command2:
 command3:
  . utils.sh; run_setup_join_on_non_master
 command4:
- for app in APP_ID; do echo "$app" >>/var/cache/appcenter-installed.txt; done
  . utils.sh; switch_to_test_app_center
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member106_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
+ . utils.sh; install_apps APP_ID
  . utils.sh; run_join_scripts
 command5:
  . utils.sh; install_ucs_test
