--- a/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-127-appupdate-member-s4.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: autotest-127-member-s4.log
 
-# AMI: Univention Corporate Server (UCS) 3.1 (official image) rev. 5 (ami-24f0fa50)
-ec2_ami: ami-24f0fa50
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
+ec2_ami: ami-00ac4477
 
 # EC2 region
 ec2_region: eu-west-1
@@ -41,30 +41,19 @@ profile:
  packages_install="univention-s4-connector univention-samba4"
  packages_remove=""
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- /usr/lib/univention-system-setup/scripts/setup-join.sh
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ . utils.sh; upgrade_to_latest_errata
+ . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest127.ldif
 command4:
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master127_IP] 'for app in APP_ID; do univention-add-app -m --latest $app; done'
- univention-run-join-scripts
+ . utils.sh; install_apps_master_packages APP_ID
+ . utils.sh; run_join_scripts
 command5:
- # Switch to Test App Center
- ucr set repository/app_center/server=appcenter.test.software-univention.de
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master127_IP] 'for app in APP_ID; do univention-add-app -m --latest $app; done'
- univention-run-join-scripts
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps_master_packages APP_ID
+ . utils.sh; run_join_scripts
 command6:
  # None
 command7:
@@ -74,6 +63,7 @@ command8:
 files:
  ~/ec2/license/autotest127.ldif /root/
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [member127]
 profile:
@@ -87,38 +77,24 @@ profile:
  packages_remove=""
  nameserver=[master127_IP]
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
+ . utils.sh; upgrade_to_latest_errata
 command3:
- ucr set nameserver1=$(cat /var/cache/univention-system-setup/profile | sed -ne 's|^nameserver=||p')
- echo -n "univention" >/tmp/univention
- /usr/lib/univention-system-setup/scripts/setup-join.sh --dcaccount Administrator --password_file /tmp/univention
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ . utils.sh; run_setup_join_on_non_master
 command4:
  for app in APP_ID; do echo "$app" >>/var/cache/appcenter-installed.txt; done
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
- univention-run-join-scripts -dcaccount Administrator -dcpwd /tmp/univention
+ . utils.sh; install_apps APP_ID
+ . utils.sh; run_join_scripts
 command5:
- ucr set repository/app_center/server=appcenter.test.software-univention.de
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
- univention-run-join-scripts -dcaccount Administrator -dcpwd /tmp/univention
+ . utils.sh; switch_to_test_app_center
+ . utils.sh; install_apps APP_ID
+ . utils.sh; run_join_scripts
 command6:
- ucr set repository/online/unmaintained=yes
- univention-install --yes ucs-test
- for app in APP_ID; do univention-install --yes ucs-test-$app || true; done
- ucr set repository/online/unmaintained=no
+ . utils.sh; install_ucs_test
+ . utils.sh; install_apps_test_packages
 command7:
- LANG=de_DE.UTF-8 ucs-test -E dangerous -F junit -l "ucs-test.log" -r apptest
+ . utils.sh; run_apptests
  LOCAL scp -i ~/ec2/keys/tech.pem -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP]:ucs-test.log .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP]:test-reports .
  LOCAL scp -i ~/ec2/keys/tech.pem -r -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[member127_IP]:"/var/log/univention/{join,setup,listener}.log" .
@@ -126,4 +102,5 @@ command8:
  halt -p
 files:
  ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
