--- a/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-101-app-master-s4.cfg
@@ -47,9 +47,8 @@ command2:
  . utils.sh; run_setup_join
 command3:
  univention-license-import /root/autotest101.ldif
- for app in APP_ID; do echo "$app" >>/var/cache/appcenter-installed.txt; done
  . utils.sh; switch_to_test_app_center
- LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master101_IP] 'for app in APP_ID; do univention-add-app -a --latest $app; done'
+ . utils.sh; install_apps APP_ID
  . utils.sh; run_join_scripts
 command4:
  . utils.sh; install_ucs_test
