--- a/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/ucsschool-performance-30000.cfg
@@ -2,8 +2,8 @@
 # These settings can be overwritten by the instance
 logfile: ucsschool-performance-30000.log
 
-# AMI: Univention Corporate Server (UCS) 3.1 (official image) rev. 5 (ami-24f0fa50)
-ec2_ami: ami-24f0fa50
+# AMI: Univention Corporate Server (UCS) 3.2 (official image) rev. 1 - ami-00ac4477
+ec2_ami: ami-00ac4477
 
 # EC2 region
 ec2_region: eu-west-1
@@ -44,34 +44,23 @@ profile:
  packages_install="univention-s4-connector univention-samba4"
  packages_remove=""
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
  resize2fs /dev/xvda1
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- /usr/lib/univention-system-setup/scripts/setup-join.sh
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ . utils.sh; upgrade_to_latest_errata
+ . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
- #wait for the reboot
- for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
+ . utils.sh; wait_for_reboot
 command3:
  univention-license-import /root/school30000.ldif
 command4:
- ucr set repository/app_center/server=appcenter.test.software-univention.de
+ . utils.sh; switch_to_test_app_center
  LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[master30_IP] 'for app in ucsschool; do univention-add-app -m --latest $app; done'
- univention-run-join-scripts
+ . utils.sh; run_join_scripts
 command5:
  univention-install --yes ucs-school-master
- univention-run-join-scripts
+ . utils.sh; run_join_scripts
 command6:
  ucr set repository/online/unmaintained=yes
  univention-install --yes ucs-test-import-performance
@@ -98,6 +87,8 @@ command9:
  halt -p
 files:
  ~/ec2/license/school30000.ldif /root/
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
 [backup31]
 profile:
@@ -111,37 +102,24 @@ profile:
  packages_remove=""
  nameserver=[master30_IP]
 command1:
- echo -e "#!/bin/sh\nroute del default ; route add default gw 10.210.216.13" >>/etc/network/if-up.d/z_route
- chmod +x /etc/network/if-up.d/z_route
- /etc/network/if-up.d/z_route
- sleep 10 # just wait a few seconds to give the amazone cloud some time
- ucr set updater/identify="UCS (EC2 Test)" update/check/cron/enabled=false update/check/boot/enabled=false
+ . utils.sh; basic_setup
 command2:
  resize2fs /dev/xvda1
- ucr set repository/online/server=testing.univention.de
- univention-upgrade --noninteractive --ignoreterm --ignoressh
- # Workaround for Bug #31561
- sleep 10
- univention-upgrade --noninteractive --ignoreterm --ignoressh
+ . utils.sh; upgrade_to_latest_errata
 command3:
- ucr set nameserver1=$(cat /var/cache/univention-system-setup/profile | sed -ne 's|^nameserver=||p')
- echo -n "univention" >/tmp/univention
- /usr/lib/univention-system-setup/scripts/setup-join.sh --dcaccount Administrator --password_file /tmp/univention
- ucr set apache2/startsite='ucs-overview/' # Bug #31682
- for srv in univention-management-console-server univention-management-console-web-server apache2; do invoke-rc.d $srv restart; done
+ . utils.sh; run_setup_join_on_non_master
  reboot
  LOCAL sleep 120 
  #wait for the reboot
- for((i=0;i<100;i++)); do pidof apache2 && break; sleep 1; done
+ . utils.sh; wait_for_reboot
 command4:
  # Switch to Test App Center
- ucr set repository/app_center/server=appcenter.test.software-univention.de
+ . utils.sh; switch_to_test_app_center
  LOCAL ssh -i ~/ec2/keys/tech.pem -t -t -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no root@[backup31_IP] 'for app in ucsschool; do univention-add-app -a --latest $app </dev/null; done'
- echo -n "univention" >/tmp/univention
- univention-run-join-scripts -dcaccount Administrator -dcpwd /tmp/univention
+ . utils.sh; run_join_scripts
 command5:
  univention-install --yes ucs-school-master
- univention-run-join-scripts -dcaccount Administrator -dcpwd /tmp/univention
+ . utils.sh; run_join_scripts
 command6:
  ucr set nss/group/cachefile/check_member=no nss/group/cachefile/invalidate_interval="#*/15 * * * *"
  ucr set directory/manager/web/modules/autosearch=0
@@ -155,4 +133,7 @@ command8:
  # None
 command9:
  halt -p
+files:
+ ~/ec2/scripts/activate-3.2-errata-test-scope.sh /root/
+ examples/jenkins/utils/utils.sh /root/
 
