Switch to 3.2 AMI and use utils.sh (Bug #32799)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46866 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-202-ucsschool-multiserver-s3.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
@@ -82,7 +82,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  reboot
@@ -119,7 +119,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  reboot
