--- a/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-200-ucsschool-singleserver-s3.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
