--- a/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
+++ b/test/ucs-ec2-tools/examples/jenkins/autotest-203-ucsschool-multiserver-s4.cfg
@@ -43,7 +43,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
  . utils.sh; run_setup_join
  reboot
  LOCAL sleep 120 
@@ -82,7 +82,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  reboot
@@ -119,7 +119,7 @@ profile:
 command1:
  . utils.sh; basic_setup
 command2:
- . utils.sh; upgrade_to_3.2
+ . utils.sh; upgrade_to_latest_errata
 command3:
  . utils.sh; run_setup_join_on_non_master
  reboot
