* New UCR variable samba/share/sysvol/update_mtime (Bug #33751)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-0@46903 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/conffiles/etc/samba/base.conf
+++ b/services/univention-samba4/conffiles/etc/samba/base.conf
@@ -39,6 +39,9 @@ if configRegistry.is_true('samba/share/sysvol', True):
 		print '\tread only = no'
 	else:
 		print '\tread only = yes'
+
+	if configRegistry.is_true('samba/share/sysvol/update_mtime', True):
+		print '\tacl xattr update mtime = yes'
 	print ''
 
 
